DockerVersion/src/main/java/com/example/dockerversion/error/CenterNotCreatedException.java
package com.example.dockerversion.error;

public class CenterNotCreatedException extends RuntimeException{
    public CenterNotCreatedException() {
        super("Center not created!");
    }
}
